Miscellaneous jPile clean up
* Fixed jPile integration tests

Renamed integration tests so they will be run by maven failsafe instead of maven surefire.
This is necessary because surefire tests are run in parallel, but the integration tests use the database and cannot handle being run in parallel. Also, it's useful to be able to separate out the tests that require the database from the unit tests.

Updated Table annotation on Customer to use 'customer' (instead of 'Customer').
This was causing the performance test to fail on a case-senstive MySQL database.

* Clean up jPile code

- Used Java 7 features where available (inferred generics, multi-catch)
- Resolved all Java compiler warnings
- Updated to Spring 3.2.6 to handle method deprecated in 3.1.x but not replaced until 3.2.x
- Explicitly added used dependency org.hibernate:hibernate-core
- Updated README to use Java 7 try-with-resources
- Removed unused Maven systemPropertyVariables from POM
- Fixed typos
- Loosen SingleInfileObjectLoader constructor type argument: this removes the need for SuppressWarnings("unchecked")

* FindBugs for jPile

Enable FindBugs 3.0.1 for jPile.
Running `mvn verify` or `mvn findbugs:check` will run FindBugs against the project and fail the build if any bugs are found.

Running `mvn site` will generate the FindBugs Bug Detector Report.

Fixed a unclosed ResultSet bug found by FindBugs.

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
     </licenses>
 
     <properties>
-        <spring-version>3.1.2.RELEASE</spring-version>
+        <spring-version>3.2.6.RELEASE</spring-version>
         <slf4j-version>1.7.2</slf4j-version>
+        <findbugs-maven-version>3.0.1</findbugs-maven-version>
     </properties>
 
 
@@ -63,13 +64,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <!-- compile with -Dperformance=true to run IntPerformanceHierarchicalInfileObjectLoaderTest -->
-                        <propertyName>performance</propertyName>
-                        <buildDirectory>${performance}</buildDirectory>
-                    </systemPropertyVariables>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -86,6 +80,23 @@
                         <phase>compile</phase>
                         <goals>
                             <goal>checkstyle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>${findbugs-maven-version}</version>
+                <configuration>
+                    <effort>Max</effort>
+                    <threshold>Medium</threshold>
+                    <xmlOutput>true</xmlOutput>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -134,6 +145,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Runtime Spring Context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Drivers supported -->
         <dependency>
             <groupId>mysql</groupId>
@@ -169,6 +188,12 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.6.8.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>3.6.8.Final</version>
             <scope>test</scope>
@@ -198,4 +223,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>${findbugs-maven-version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
