Enforce no rawtypes; fix occurrences
- Added `HierarchicalInfileObjectLoader#setIgnoredClasses(Set<Class<?>>)`
- Deprecated `HierarchicalInfileObjectLoader#setClassesToIgnore(Set<Class>)`

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version.maven.compiler.plugin}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Werror</arg>
+                        <arg>-Xlint:rawtypes</arg>
+                    </compilerArgs>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -223,7 +236,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <reporting>
         <plugins>
             <plugin>
