--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <artifactId>javassist</artifactId>
             <version>3.16.1-GA</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.1.0.RELEASE</version>
+        </dependency>
 
         <!-- Logging -->
         <dependency>
@@ -220,7 +225,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>${spring-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
