Minor updates in preparation for 1.8.0 release
- Add explicit dependency on JSR 305 to make maven-dependency-plugin happy
- Update README.md to reflect current version

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- JSR 305 Annotations -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>${findbugs-maven-version}</version>
+        </dependency>
+
         <!-- Runtime Spring Context -->
         <dependency>
             <groupId>org.springframework</groupId>
