--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         help.
     </description>
     <artifactId>jpile</artifactId>
-    <version>1.8.0</version>
+    <version>1.8.1-SNAPSHOT</version>
     <url>https://github.com/opower/jpile</url>
 
     <licenses>
@@ -36,7 +36,7 @@
         <url>git@github.com:opower/jpile.git</url>
         <connection>scm:git:git@github.com:opower/jpile.git</connection>
         <developerConnection>scm:git:git@github.com:opower/jpile.git</developerConnection>
-        <tag>1.8.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
